tests/samples/negative/pattern_matching/large_array_match_requires_irrefutable.ax
module large_array_match_requires_irrefutable;

fn main() -> i32 {
    let values: [4097]bool = [false; 4097];
    return match values {
        [true, ..] => 1,
    };
}
